crates/ide/tests/snapshots/nav__hover_docs_on_a_method_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_hover_docs(&fixture, \"String greet(\")"
---
--- hover @"String greet(" ---
greet(String): String
--- docs ---
Greets someone.

**Parameters:**
- `name` — who to greet

**Returns:** the greeting

**Throws:**
- `IllegalStateException` — if closed
