crates/ide/tests/snapshots/nav__hover_docs_on_a_record_component.snap
---
source: crates/ide/tests/nav.rs
expression: "render_hover_docs(&fixture, \"int left\")"
---
--- hover @"int left" ---
left: int
--- docs ---
the left value
