crates/ide/tests/snapshots/nav__hover_docs_on_an_undocumented_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_hover_docs(&fixture, \"void call(\")"
---
--- hover @"void call(" ---
call(): void
--- docs ---
<none>
