crates/ide/tests/snapshots/nav__hover_expression_type.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"local;\")"
---
--- goto @"local;" ---
local @82..87
--- hover ---
int
