crates/ide/tests/snapshots/nav__hover_field_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"count;\\n\")"
---
--- goto @"count;\n" ---
count @42..47
--- hover ---
count: int
