crates/ide/tests/snapshots/nav__hover_method_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"int add(\")"
---
--- goto @"int add(" ---
add @134..137
--- hover ---
add(int, int): int
