crates/ide/tests/snapshots/nav__hover_over_dollar_class_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav_at(&fixture, \"A$B\", 0)"
---
--- goto @"A$B"#0 ---
A$B @28..31
--- hover ---
class A$B
