crates/ide/tests/snapshots/nav__hover_over_dollar_field_declaration.snap
---
source: crates/ide/tests/nav.rs
expression: "render_nav(&fixture, \"x$y;\\n\")"
---
--- goto @"x$y;\n" ---
x$y @42..45
--- hover ---
x$y: int
